[package]
name = "stdio_tokenizer"
version = "0.1.0"
authors = ["merl <merl.001.mia@gmail.com>"]

[dependencies]
tokenizer = { git = "https://github.com/merl-twin/tokenizer.git" }
rust-stemmers = { git = "https://github.com/merl-twin/rust-stemmers.git", branch = "russian_stemmer_fix" }

time = "0.1.4"
serde_derive = "1.0"
serde_json = "1.0"
serde = "1.0"
clap = "2.31"
log = "0.4"
snap = "0.2"
